# peax

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: MINIMAX_DQN_README.md  README.md  README_cleanrl.md  __init__.py  cleanrl_dqn.py  collect_minimax_data.py  collect_selfplay_data.py  dqn_pursuer.py  dqn_selfplay.py  dqn_shared.py  fit_minimax_data.py  load_selfplay_data_example.py  minimax_dqn.py  minimax_q.py  play_fpta.py  plot_results.py  ppo_selfplay.py  ppo_selfplay_fast.py  run_lstqd_end_end.py  run_lstqd_fpta.py  run_lstqd_hydra.py  search_basis.py  selfplay_viewer_app.py  visualize_lstqd.py
examples/conf/: config.yaml  fine_control.yaml  lstq_config.yaml  lstq_hydra_config.yaml  quick_test.yaml
notebooks/: plot_basis.ipynb
peax/: __init__.py  basis.py  boundaries.py  dynamics.py  environment.py  fpta.py  types.py  util.py
tests/: __init__.py  test_environment.py
